--- a/acts/src/css/monsterSheet.css
+++ b/acts/src/css/monsterSheet.css
@@ -207,4 +207,67 @@ body {
           margin: 20px 0;
       }
   }
-  
+
+.monsterList{
+  background: #FDF1DC;
+}
+
+.monsterListHead{
+  /* background: #ffd48a; */
+  background:#7A200D;
+  color: white;
+}
+
+.listFilters{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.listFilters input{
+  width: 20%;
+}
+
+.listFilters label{
+  position: absolute;
+  right: 21%;
+  color:#7A200D;
+  font-weight: bold;
+}
+
+.listFilters select{
+  position: absolute;
+  right: 17.5%
+}
+
+.monsterPage{
+  background-color: gray;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
+
+.monsterListContainer{
+  width: 65%;
+}
+
+.monsterPage h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.allContainers .monsterContainer{
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  width: 12vw;
+  height: 5vw;
+  margin: 1vw;
+  background-color: gray;
+  cursor: pointer;
+}
